chore: Fix Warnings